Excises unneeded dependencies. Adds kotlinx serialization + agent-core.